--- a/LeRay/docker-images/apache-php-image/src/index.html
+++ b/LeRay/docker-images/apache-php-image/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Piuma - A Multipurpose Countdown HTML Template</title>
+	<title>RES HTTP Infra Lab !</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="keywords" content="some keywords that best describe your business">
 	<meta name="description" content="a short description of your company">
@@ -36,7 +36,7 @@
 			<header class="col-xs-12 text-center">
 				<div class="logo">
 					<a href="#"><img src="images/logo.png"></a>
-					<h1>We are currently working on a awesome new site.</h1>
+					<h1 id="change">We are currently working on a awesome new site for RES</h1>
 					<ul class="time">
 						<li>
 							<span class="days" id="days"></span><br />
@@ -57,111 +57,6 @@
 					</ul>
 				</div>
 			</header>
-		</div>
-		<div class="row">
-			<div class="col-xs-12 text-center">
-				<div class="down">
-					<a href="#about" class="smooth"><i class="fa fa-angle-down fa-3x"></i></a>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-<div class="about" id="about">
-	<div class="container">
-		<div class="row">
-			<div class="col-xs-10 text-center">
-				<div class="about-content">
-					<h2>About Piuma, the best Coming Soon Theme</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-				</div>				
-			</div>
-		</div>
-	</div>
-</div>
-<div class="features">
-	<div class="container">
-		<div class="row">
-			<div class="col-xs-12 text-center">
-				<div class="features-content">
-					<header>
-						<h2>Features</h2>
-					</header>
-					<div class="grid clearfix">
-						<div class="col-sm-4 text-center">
-							<i class="fa fa-mobile fa-5x"></i>
-							<b>Fully Responsive</b>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-						</div>
-						<div class="col-sm-4 text-center">
-							<i class="fa fa-clock-o fa-4x"></i>
-							<b>Countdown Clock</b>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-						</div>
-						<div class="col-sm-4 text-center">
-							<i class="fa fa-picture-o fa-4x"></i>
-							<b>Hero Image</b>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-						</div>
-					</div>
-				</div>				
-			</div>
-		</div>
-	</div>
-</div>
-<div class="social">
-	<div class="container">
-		<div class="row">
-			<div class="col-xs-12 text-center">
-				<div class="social-content">
-					<h2>Social Media</h2>
-					<div class="socmed">
-						<a href="https://creativemarket.com/SRPACDY" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
-						<a href="https://creativemarket.com/SRPACDY" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
-						<a href="https://creativemarket.com/SRPACDY" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
-						<a href="https://creativemarket.com/SRPACDY" target="_blank"><i class="fa fa-vimeo-square fa-2x"></i></a>
-						<a href="https://creativemarket.com/SRPACDY" target="_blank"><i class="fa fa-tumblr fa-2x"></i></a>
-						<a href="https://creativemarket.com/SRPACDY" target="_blank"><i class="fa fa-pinterest fa-2x"></i></a>	
-						<a href="https://creativemarket.com/SRPACDY" target="_blank"><i class="fa fa-flickr fa-2x"></i></a>
-					</div>					
-				</div>				
-			</div>
-		</div>
-	</div>
-</div>
-<div class="subscribe" id="subscribe">
-	<div class="container">
-		<div class="row">
-			<div class="col-xs-12 text-center">
-				<div class="subscribe-form">
-					<h3>Stay tuned and don't forget Sign up for latest Updates!</h3>
-					<form action="contact.php" method="post">
-						<input type="text" id="inform_email" placeholder="Enter your email and stay tuned!" onFocus="if(!this._haschanged){this.value=''};this._haschanged=true;" />
-						<input type="submit" value="Subscribe" id="in_submit" />
-					</form>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-<div class="contact bg">
-	<div class="container">	
-		<div class="row">
-			<div class="col-md-12 text-center">
-				<h1>Get In Touch</h1>
-			</div>			
-			<div class="col-md-12">
-				<form action="contact.php" method="post" id="contact_form" class="contact_form">
-					<fieldset>
-						<div class="col-sm-6"><input type="text" id="name" placeholder="Name" onFocus="if(!this._haschanged){this.value=''};this._haschanged=true;" /></div>
-						<div class="col-sm-6"><input type="text" id="email" placeholder="Email" onFocus="if(!this._haschanged){this.value=''};this._haschanged=true;" /></div>
-						<div class="col-xs-12"><textarea id="msg" cols="20" rows="3" placeholder="Message" onFocus="if(!this._haschanged){this.value=''};this._haschanged=true;"></textarea></div>
-						<div class="col-xs-12 text-center">
-						<input type="submit" value="Subscribe" id="contact_submit" />
-						</div>
-					</fieldset>
-				</form>
-			</div>
 		</div>
 	</div>
 </div>
