Better end to step 4

--- a/LeRay/docker-images/apache-php-image/src/index.html
+++ b/LeRay/docker-images/apache-php-image/src/index.html
@@ -35,7 +35,6 @@
 		<div class="row">
 			<header class="col-xs-12 text-center">
 				<div class="logo">
-					<a href="#"><img src="images/logo.png"></a>
 					<h1 id="change">We are currently working on a awesome new site for RES</h1>
 					<ul class="time">
 						<li>
@@ -82,6 +81,9 @@
 	<script type="text/javascript" src="js/supersized.3.2.7.js" charset="utf-8"></script>
 	<script type="text/javascript" src="js/images.js" charset="utf-8"></script>
 	<script type="text/javascript" src="js/form.js" charset="utf-8"></script>
+	
+	<!-- Custom script to load facts about 2020 -->
+	<script type="text/javascript" src="js/showSentences.js" charset="utf-8"></script>
 
 	<!-- End Document
 	================================================== -->
